# Radiflow-Player

./: .gitignore  DOCUMENT.md  README.md  index.html  main.js  metadata.json  package-lock.json  package.json  readme-zh.md  server.ts  vite.config.ts
.electron-preview/: DIPS  Local State
.electron-preview/Cache/Cache_Data/: data_0  data_1  f_000001  f_000002  f_000007  f_000008  f_000009  f_00000a  f_00000b  f_00000c  f_00000d  f_00000e  f_00000f  index
.electron-preview/Code Cache/js/: 71b3636003e2df86_0  fccd76df0c5cf571_0
.electron-preview/Code Cache/js/index-dir/: the-real-index
.electron-preview/DawnGraphiteCache/: data_1  index
.electron-preview/DawnWebGPUCache/: data_1  index
.electron-preview/GPUCache/: data_0  data_1  data_2  index
.electron-preview/Local Storage/leveldb/: LOG  LOG.old
.electron-preview/Session Storage/: LOG  LOG.old
.github/: copilot-instructions.md
.github/instructions/: User.instructions.md
music/: .gitkeep
music/local/: library-cache.json
rust-backend/: Cargo.toml
rust-backend/src/: main.rs
scripts/: copy-rust-backend.mjs  electron-dev.mjs  electron-preview.mjs  quick-start.mjs
src/: App.tsx  index.css  main.tsx
src/components/: AppLogo.tsx  Background.tsx  DetachedMiniPlayerWindow.tsx  EQView.tsx  Library.tsx  LyricsView.tsx  MiniPlayer.tsx  PlayerControls.tsx  Playlist.tsx  SettingsView.tsx  Sidebar.tsx  SpectrumVisualizer.tsx  WindowChrome.tsx
src/hooks/: useLibrary.ts  useLyrics.ts
src/lib/: copy.ts
src/types/: player.ts
src/utils/: lyricsParser.ts
(+2 files in other folders)
